[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/DialogueCompiler.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DialogueInterpreter.gd" type="Script" id=2]

[node name="DialogueTest" type="Node"]

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 544.0
margin_top = 153.0
margin_right = 852.0
margin_bottom = 415.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Convo" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -63.0
margin_right = 1.0
margin_bottom = -49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Narr" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -82.0
margin_bottom = 53.0

[node name="Name" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 14.0

[node name="C1" type="Button" parent="Panel"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 12.0

[node name="C2" type="Button" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -20.0
margin_right = 6.0

[node name="C3" type="Button" parent="Panel"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -20.0

[node name="Button" type="Button" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 479.0
margin_bottom = 220.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 400.0
margin_top = 250.0
margin_right = 479.0
margin_bottom = 270.0
text = "Load1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 400.0
margin_top = 300.0
margin_right = 479.0
margin_bottom = 320.0
text = "Load2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Panel" to="Panel" method="_on_Panel_gui_input"]
[connection signal="pressed" from="Panel/C1" to="Panel" method="_on_C1_pressed"]
[connection signal="pressed" from="Panel/C2" to="Panel" method="_on_C2_pressed"]
[connection signal="pressed" from="Panel/C3" to="Panel" method="_on_C3_pressed"]
[connection signal="pressed" from="Button" to="Node" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="Node" method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="Node" method="_on_Button3_pressed"]
